# kernel_perf_test

./: .gitignore  .gitmodules  README.md  kill.sh  pyproject.toml
kernel_perf_test/analysis/: utils.py
kernel_perf_test/tests/: batch_test_attn_backend.py  batch_test_attn_backend_excel.py  batch_test_attn_backend_figure.py  multi_test_attn_backend.py  ncu_test_attn_backend_profile.py  single_test_attn_backend.py  test_attn_backend.py
kernel_perf_test/utils/: __init__.py  bench_util.py  cuda_graph_util.py  deepep_util.py  deepgemm_util.py  device_util.py  module_util.py  perf_result_io.py
scripts/: build.sh  start_batch_test_attn_backend.sh  start_batch_test_attn_backend_excel.sh  start_batch_test_attn_backend_figure.sh  start_multi_test.sh  start_ncu_test_attn_backend_profile.sh  start_single_test_attn_backend.sh  start_test.sh  start_test_attn_backend.sh
scripts/attention/: start_batch_test_attn_backend_excel.sh  start_batch_test_attn_backend_figure.sh  start_batch_test_qwen3_moe_attention_layer.sh  start_ncu_test_attn_backend_profile.sh  start_single_test_attn_backend.sh
scripts/norm/: start_batch_test_fused_add_rmsnorm.sh
templates/: afd_trace_template.json
test_data/: deepgemm_masked_moe_ffn_performance.xlsx  deepgemm_masked_moe_ffn_trace_num_local_experts-24_expected_m-86.json  fused_add_rmsnorm_performance.xlsx  qwen3_moe_attention_layer_performance.xlsx  replicated_linear_moe_gate_performance.xlsx  select_topk_experts_performance.xlsx
torch_cuda_profiler/replicated_linear_moe_gate/: replicated_linear_moe_gate_trace_batch_size-256.json
(+33 files in other folders)
