[project]
name = "kernel-perf-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flashinfer-python>=0.5.2",
    "setuptools>=80.9.0",
    "sgl-kernel>=0.3.17.post1",
    "sglang>=0.5.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
