[project]
name = "kernel-perf-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch-memory-saver==0.0.9rc2",
    "apache-tvm-ffi==0.1.0b15",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "setuptools>=80.9.0",
    "sglang==0.5.3.post3",
    "torch>=2.8.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
